@@ -103,7 +103,7 @@ int exif_show_all=1;
 extern "C"
 void scan_exiv2(const class scanner_params &sp,const recursion_control_block &rcb)
 {
-    static be13::hash_def hasher;
+    //static be13::hash_def hasher;
     assert(sp.sp_version==scanner_params::CURRENT_SP_VERSION);
     if(sp.phase==scanner_params::PHASE_STARTUP){
         assert(sp.info->si_version==scanner_info::CURRENT_SI_VERSION);
@@ -114,7 +114,7 @@ void scan_exiv2(const class scanner_params &sp,const recursion_control_block &rc
 	sp.info->feature_names.insert("exif");
 	sp.info->feature_names.insert("gps");
 	sp.info->flags = scanner_info::SCANNER_DISABLED; // disabled because we have be_exif
-	hasher = sp.info->config->hasher;
+	//hasher = sp.info->config->hasher;
 	return;
     }
     if(sp.phase==scanner_params::PHASE_SHUTDOWN) return;
@@ -157,7 +157,7 @@ void scan_exiv2(const class scanner_params &sp,const recursion_control_block &rc
 			 * Create the MD5 of the first 4K to use as a unique identifier.
 			 */
 			sbuf_t tohash(sbuf,0,4096);
-			string md5_hex = hasher.func(tohash.buf,tohash.bufsize);
+			string md5_hex = exif_recorder->fs.hasher.func(tohash.buf,tohash.bufsize);
 
 			char xmlbuf[1024];
 			snprintf(xmlbuf,sizeof(xmlbuf),
