@@ -37,7 +37,7 @@ using namespace std;
 
 
 
-static be13::hash_def hasher;
+//static be13::hash_def hasher;
 extern "C"
 void scan_vcard(const class scanner_params &sp,const recursion_control_block &rcb)
 {
@@ -50,7 +50,7 @@ void scan_vcard(const class scanner_params &sp,const recursion_control_block &rc
         sp.info->description    = "Scans for VCARD data";
         sp.info->scanner_version= "1.0";
 	sp.info->feature_names.insert("vcard");
-        hasher    = sp.info->config->hasher;
+        //hasher    = sp.info->config->hasher;
 	return;
     }
     if(sp.phase==scanner_params::PHASE_SCAN){
@@ -81,7 +81,7 @@ void scan_vcard(const class scanner_params &sp,const recursion_control_block &rc
 		/* We should probably validate the UTF-8. */
 		if(valid){
 		    /* got a valid card; I can carve it! */
-		    vcard_recorder->carve(sbuf,begin,(end-begin)+end_len,".vcf",hasher);
+		    vcard_recorder->carve(sbuf,begin,(end-begin)+end_len,".vcf");
 		    i = end+end_len;		// skip to the end of the vcard
 		    continue;			// loop again!
 		}
