@@ -940,7 +940,7 @@ static std::string scan_winpe_verify (const sbuf_t &sbuf)
     return xml.str();
 }
 
-static be13::hash_def hasher;
+//static be13::hash_def hasher;
 extern "C"
 void scan_winpe (const class scanner_params &sp,
 		 const recursion_control_block &rcb)
@@ -955,7 +955,7 @@ void scan_winpe (const class scanner_params &sp,
         sp.info->scanner_version = "1.0.0";
         sp.info->feature_names.insert("winpe");
 
-        hasher    = sp.info->config->hasher;
+        //hasher    = sp.info->config->hasher;
 
         return;
     }
@@ -1000,7 +1000,7 @@ void scan_winpe (const class scanner_params &sp,
 		if (xml != "") {
 		    // If we have 4096 bytes, generate md5 hash
                     sbuf_t first4k(data,0,4096);
-		    std::string hash = hasher.func(first4k.buf,first4k.bufsize);
+		    std::string hash = f->hasher().func(first4k.buf,first4k.bufsize);
 		    f->write(data.pos0,hash,xml);
 		}
 	    }
